[egg_info]
tag_build = dev

[metadata]
name = Trac
version = 1.7.1
description = Integrated SCM, wiki, issue tracker and project environment
long_description = file: README.rst
author = Edgewall Software
author_email = trac-dev@googlegroups.com
license = BSD
url = https://trac.edgewall.org
download_url = https://trac.edgewall.org/wiki/TracDownload
classifiers =
    Environment :: Web Environment
    Framework :: Trac
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Bug Tracking
    Topic :: Software Development :: Version Control

[options]
zip_safe = True
python_requires = >= 3.5
packages = find:
setup_requires =
    jinja2>=2.9.3
install_requires =
    setuptools>=30.3
    jinja2>=2.9.3
    multipart; python_version>='3.13'

[options.package_data]
* = templates/*.*
trac =
    htdocs/*.*
    htdocs/README
    htdocs/js/*.*
    htdocs/js/messages/*.*
    htdocs/css/*.*
    htdocs/css/jquery-ui/*.*
    htdocs/css/jquery-ui/images/*.*
    htdocs/guide/*
    locale/*/LC_MESSAGES/messages.mo
    locale/*/LC_MESSAGES/tracini.mo
trac.wiki = default-pages/*
trac.ticket = workflows/*.ini
tracopt = ticket/htdocs/*.js

[options.packages.find]
exclude =
    *.tests
    tests.*
    *.tests.*

[options.extras_require]
    babel = Babel>=2.2,<2.10
    mysql = PyMySQL
    postgresql = psycopg2>=2.5
    psycopg2 = psycopg2>=2.5
    psycopg2-binary = psycopg2-binary
    pygments = Pygments>=1.0
    rest = docutils>=0.14
    textile = textile>=2.3

[options.entry_points]
console_scripts =
    trac-admin = trac.admin.console:run
    tracd = trac.web.standalone:main

trac.plugins =
    trac.about = trac.about
    trac.admin.console = trac.admin.console
    trac.admin.web_ui = trac.admin.web_ui
    trac.attachment = trac.attachment
    trac.db.mysql = trac.db.mysql_backend[mysql]
    trac.db.postgres = trac.db.postgres_backend
    trac.db.sqlite = trac.db.sqlite_backend
    trac.mimeview.patch = trac.mimeview.patch
    trac.mimeview.pygments = trac.mimeview.pygments[pygments]
    trac.mimeview.rst = trac.mimeview.rst[rest]
    trac.mimeview.txtl = trac.mimeview.txtl[textile]
    trac.notification.api = trac.notification.api
    trac.notification.mail = trac.notification.mail
    trac.notification.prefs = trac.notification.prefs
    trac.prefs = trac.prefs.web_ui
    trac.search = trac.search.web_ui
    trac.ticket.admin = trac.ticket.admin
    trac.ticket.batch = trac.ticket.batch
    trac.ticket.query = trac.ticket.query
    trac.ticket.notification = trac.ticket.notification
    trac.ticket.report = trac.ticket.report
    trac.ticket.roadmap = trac.ticket.roadmap
    trac.ticket.web_ui = trac.ticket.web_ui
    trac.timeline = trac.timeline.web_ui
    trac.versioncontrol.admin = trac.versioncontrol.admin
    trac.versioncontrol.svn_authz = trac.versioncontrol.svn_authz
    trac.versioncontrol.web_ui = trac.versioncontrol.web_ui
    trac.web.auth = trac.web.auth
    trac.web.main = trac.web.main
    trac.web.session = trac.web.session
    trac.wiki.admin = trac.wiki.admin
    trac.wiki.interwiki = trac.wiki.interwiki
    trac.wiki.macros = trac.wiki.macros
    trac.wiki.web_ui = trac.wiki.web_ui
    trac.wiki.web_api = trac.wiki.web_api
    tracopt.perm.authz_policy = tracopt.perm.authz_policy
    tracopt.perm.config_perm_provider = tracopt.perm.config_perm_provider
    tracopt.ticket.clone = tracopt.ticket.clone
    tracopt.ticket.commit_updater = tracopt.ticket.commit_updater
    tracopt.ticket.deleter = tracopt.ticket.deleter
    tracopt.versioncontrol.git.git_fs = tracopt.versioncontrol.git.git_fs
    tracopt.versioncontrol.svn.svn_fs = tracopt.versioncontrol.svn.svn_fs
    tracopt.versioncontrol.svn.svn_prop = tracopt.versioncontrol.svn.svn_prop

[bdist_wininst]
bitmap = setup_wininst.bmp

[extract_messages]
add_comments = TRANSLATOR:
copyright_holder = Edgewall Software
msgid_bugs_address = trac-dev@googlegroups.com
output_file = trac/locale/messages.pot
keywords = _ ngettext:1,2 N_ tag_ tagn_:1,2 cleandoc_
mapping_file = messages.cfg

[init_catalog]
input_file = trac/locale/messages.pot
output_dir = trac/locale

[compile_catalog]
directory = trac/locale

[update_catalog]
input_file = trac/locale/messages.pot
output_dir = trac/locale

[extract_messages_js]
add_comments = TRANSLATOR:
copyright_holder = Edgewall Software
msgid_bugs_address = trac-dev@googlegroups.com
output_file = trac/locale/messages-js.pot
no-default-keywords = yes
keywords = _ ngettext:1,2 N_
mapping_file = messages-js.cfg

[init_catalog_js]
domain = messages-js
input_file = trac/locale/messages-js.pot
output_dir = trac/locale

[compile_catalog_js]
domain = messages-js
directory = trac/locale

[update_catalog_js]
domain = messages-js
input_file = trac/locale/messages-js.pot
output_dir = trac/locale

[generate_messages_js]
domain = messages-js
input_dir = trac/locale
output_dir = trac/htdocs/js/messages

[extract_messages_tracini]
add_comments = TRANSLATOR:
copyright_holder = Edgewall Software
msgid_bugs_address = trac-dev@googlegroups.com
output_file = trac/locale/tracini.pot
keywords = ConfigSection:2 Option:4 BoolOption:4 IntOption:4 FloatOption:4 ListOption:6 ChoiceOption:4 PathOption:4 ExtensionOption:5 OrderedExtensionsOption:6
no-default-keywords = yes
mapping_file = tracini.cfg

[init_catalog_tracini]
domain = tracini
input_file = trac/locale/tracini.pot
output_dir = trac/locale

[compile_catalog_tracini]
domain = tracini
directory = trac/locale

[update_catalog_tracini]
domain = tracini
input_file = trac/locale/tracini.pot
output_dir = trac/locale

[check_catalog]
domain = messages
input_dir = trac/locale

[check_catalog_js]
domain = messages-js
input_dir = trac/locale

[check_catalog_tracini]
domain = tracini
input_dir = trac/locale
